# crime_patterns

./: .gitignore  CHANGES.md  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
paper/: crime_patterns.tex  crime_patterns_pres.tex  references.bib  task_paper.py  task_presentation.py
src/crime_patterns/: __init__.py  config.py  utilities.py
src/crime_patterns/analysis/: point_patterns.py  spatial_regression.py  task_analysis.py  task_point_patterns_analysis.py
src/crime_patterns/data_management/: __init__.py  clean_data.py  data_info.yaml  task_data_download.py  task_data_management.py
src/crime_patterns/final/: __init__.py  plotting.py  task_final.py  task_generate_plots.py  task_generate_results.py  task_plot_point_patterns.py
src/crime_patterns/paper/: task_paper.py  task_presentation.py
src/notebooks/: X_hotspots.pkl  load_data.ipynb  point_pattern_analysis.ipynb  point_pattern_analysis_example.ipynb  spatial_autocorrelation_example.ipynb  spatial_regression.ipynb  test_data_prep.ipynb
tests/: conftest.py
tests/analysis/: test_model.py  test_point_patterns.py  test_predict.py  test_spatial_regression.py
tests/data/: sample_crime_incidence_raw.csv  sample_raw_data_info.yaml
tests/data_management/: test_clean_data.py
tests/test_data/: test_regional_crime_data.dbf  test_regional_crime_data.shp  test_regional_crime_data.shx
